# Pibot-cnc-pendant-firmware

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dump.bat  eraseflash.bat  sdkconfig  uploadfs.bat
boards/pibot_pendant_v1_0/: board_config.cmake  partitions.csv  sdkconfig  sdkconfig.default
boards/pibot_pendant_v1_0/components/bsp/: CMakeLists.txt  backlight_def.h  bluetooth_def.h  board_config.h  board_init.c  board_init.h  bt_ble_def.h  bt_serial_def.h  buzzer_def.h  control_event.h  control_types.h  disp_backlight_def.h  disp_ili9341_spi_def.h  display_def.h  ili9341_def.h  lv_conf.h  phy_buttons_def.h  phy_encoder_def.h  phy_potentiometer_def.h  phy_switch_def.h  sd_def.h  serial_def.h  tasks_def.h  touch_ft6336u_def.h
boards/pibot_pendant_v1_0/components/bsp/tbd/: touch_def.h
cmake/: colors.cmake  dev_tools.cmake  features.cmake  sanity_check.cmake  targets.cmake
components/esp3d_log/: esp3d_log.c  esp3d_log.h  library.json
components/esp_littlefs/: idf_component.yml
components/lvgl/scripts/ok.c/: ok_b.c
docs/: pibot-cnc-pendant-documentation.md
hardware/common/drivers/disp_backlight/: CMakeLists.txt  backlight.c  backlight.h  disp_backlight.c  disp_backlight.h  disp_backlight_config.h
hardware/drivers/backlight/: CMakeLists.txt  backlight.h  backlight_config.h
main/: CMakeLists.txt
main/core/: esp3d_commands.cpp  esp3d_settings.cpp  esp3d_tft.cpp  esp3d_translations_init.cpp  esp3d_values.cpp
main/core/commands/: esp0.cpp  esp100.cpp  esp101.cpp  esp110.cpp  esp202.cpp  esp214.cpp  esp216.cpp  esp250.cpp  esp290.cpp  esp400.cpp  esp401.cpp  esp410.cpp  esp420.cpp  esp910.cpp  esp920.cpp  esp950.cpp
main/core/includes/: esp3d_client.h  esp3d_commands.h  esp3d_settings.h  esp3d_translations_list.h  esp3d_values.h  esp3d_version.h  lfs.h
main/display/: esp3d_tft_ui.cpp  esp3d_tft_ui.h  esp3d_values.cpp  esp3d_values.h  esp3d_values_list.h
main/display/cnc/: esp3d_system_values.cpp  esp3d_system_values_list.inc
main/display/cnc/grblhal/: esp3d_styles.cpp.old  esp3d_styles.h  esp3d_styles.h.old  esp3d_target_values.cpp  esp3d_target_values_list.inc  esp3d_tft_main_ui.cpp  esp3d_tft_ui.cpp.old
main/display/cnc/grblhal/res_320_240/: check_s.c  esp3d_styles_res.h  files_m.c  hold_s.c  home_s.c  information_m.c  lock_b.c  logo.c  logo_300_224_BW.c.old  macros_m.c  positions_m.c  probe_m.c  reset_m.c  run_s.c  sleep_s.c  status_s.c  unlock_b.c
main/display/cnc/grblhal/screens/: main_screen.cpp  main_screen.cpp.old  main_screen.h  settings_screen.cpp.old
main/display/screens/: ap_screen.cpp.old  splash_screen.cpp  sta_screen.cpp.old  wifi_screen.cpp.old
main/modules/bt_ble/: bt_ble_config.h  esp3d_bt_ble_client.cpp  esp3d_bt_ble_client.h  esp3d_bt_ble_config.h
main/modules/bt_serial/: bt_serial_config.h  esp3d_bt_serial_client.cpp  esp3d_bt_serial_client.h  esp3d_bt_serial_config.h
main/modules/buzzer/: esp3d_buzzer.cpp  esp3d_buzzer.h  esp3d_notes.h
main/modules/filesystem/: esp3d_flash.cpp  esp3d_sd.cpp  esp3d_sd.h  esp3d_sd_config.h
main/modules/filesystem/flash/: esp_flash_littleFs.cpp
main/modules/filesystem/sd/: esp_sd_sdio.cpp  esp_sd_spi.cpp
main/modules/gcode_host/: esp3d_gcode_host_service.cpp  esp3d_gcode_host_service.h  esp3d_tft_stream.cpp
main/modules/network/: esp3d_network.cpp  esp3d_network.h  esp3d_network_services.cpp
main/modules/notifications/: esp3d_notifications_service.cpp
main/modules/rendering/: esp3d_rendering_client.cpp
main/modules/serial/: esp3d_serial_client.cpp  esp3d_serial_client.h  esp3d_serial_config.h
main/modules/time/: esp3d_time_service.cpp
main/modules/update/: esp3d_update_service.cpp
resources/: base_s.xcf
resources/Alarm_s/: alarm.xcf  alarm_s.c
resources/Alarm_s/alarm_s.c/: alarm_s.c
resources/Change_b/: change.xcf  change_b.c
resources/Change_b/change_b.c/: change_b.c
resources/Changetool_m/: changetool.xcf  changetool_m.c
resources/Changetool_m/changetool_m.c/: changetool_m.c
resources/Check_s/: check.xcf
resources/Check_s/check_s.c/: check_s.c
resources/Close_b/: close.xcf  close_b.c
resources/Close_b/close_b.c/: close_b.c
resources/Door_s/: door.xcf  door_s.c
resources/Door_s/door_s.c/: door_s.c
resources/Files_m/: files.xcf
resources/Files_m/files_m.c/: files_m.c
resources/Fonts/: ranges.txt
resources/Hold_s/: hold_s.xcf
resources/Hold_s/hold_s.c/: hold_s.c
resources/Home_s/: home_s.xcf
resources/Home_s/home_s.c/: home_s.c
resources/Idle_s/: idle_s.c  idle_s.xcf
resources/Idle_s/idle_s.c/: idle_s.c
resources/Information_m/: information.xcf
resources/Information_m/information_m.c/: information_m.c
resources/Jog_m/: Jog.xcf  Jog_m.c
resources/Jog_m/jog_m.c/: jog_m.c
resources/Jog_s/: jog_s.xcf
resources/Jog_s/jog_s.c/: jog_s.c
resources/Lock_b/: lock_b.xcf
resources/Lock_b/lock_b.c/: lock_b.c
resources/Ok_b/: ok.xcf  ok_b.c
resources/Ok_b/ok_b.c/: ok_b.c
resources/Positions_m/: positions_m.xcf
resources/Positions_m/positions_m.c/: positions_m.c
resources/Probe_m/: probe_m.xcf
resources/Probe_m/probe_m.c/: probe_m.c
resources/Reset_m/: reset_m.xcf
resources/Reset_m/reset_m.c/: reset_m.c
resources/Run_s/: run_s.xcf
resources/Run_s/run_s.c/: run_s.c
resources/Settings_m/: settings.xcf  settings_m.c
resources/Settings_m/settings_m.c/: settings_m.c
resources/Sleep_s/: sleep_s.xcf
resources/Sleep_s/sleep_s.c/: sleep_s.c
resources/Status_s/: status_s.c  status_s.xcf
resources/Tools_s/: tool.c  tool_s.c  tools_s.xcf
resources/Tools_s/tools_s.c/: tools_s.c
resources/Unlock_b/: unlock_b.xcf
resources/Unlock_b/unlock_b.c/: unlock_b.c
resources/Workspaces_m/: workspaces.xcf  workspaces_m.c
resources/Workspaces_m/workspaces_m.c/: workspaces_m.c
resources/back_b/: back.c  back_b.xcf
resources/back_b/back_b.c/: back_b.c
resources/grblHAL/: grblHAL.xcf
resources/logo/: logo.xcf
resources/logo/logo.c/: logo.c
resources/macros_m/: macros_m.xcf
resources/macros_m/macros_m.c/: macros_m.c
tools/: tree.py
tools/images_converter/: image_config.py  simple_converter.py
(+37 files in other folders)
